Widgets without label are not collapsed on mobile do Fix #23.

--- a/src/assets/scss/_media_query.scss
+++ b/src/assets/scss/_media_query.scss
@@ -194,7 +194,7 @@ footer{
                         z-index: 1;
                         opacity: 0;
                         &:checked{
-                            &~p, &~div, &~ul, &~img{
+                            &~h6~p, &~h6~div, &~h6~ul, &~h6~img{
                                 margin-top: 0;
                                 max-height: 0;
                                 opacity: 0;
